fix: Correct the highlight on small devices
The highlight on small devices is generated from the :hover CSS rule not the active rule.

--- a/css/styles.css
+++ b/css/styles.css
@@ -254,10 +254,12 @@ section:nth-of-type(even) .card {
     }
 }
 
-.navbar__menu .menu__link:hover {
-    background: #333;
-    color: #fff;
-    transition: ease 0.3s all;
+@media (hover: hover) and (pointer: fine) {
+    .navbar__menu .menu__link:hover {
+        background: #333;
+        color: #fff;
+        transition: ease 0.3s all;
+    }
 }
 
 /* Header Styles */
